# fractoid

./: .gitignore  .replit  CMakeLists.txt  README.md  compile_commands.json  fractoid-gl.cpp  fractoid.cpp  makefile
.github/workflows/: generate.yml  release.yml
Forms/: MainWindow.ui  SettingsWindow.ui
Headers/: Fractal.h  InteractiveLabel.h  MainWindow.h  SettingsWindow.ui
Sources/: Fractal.cpp  InteractiveLabel.cpp  MainWindow.cpp  SettingsWindow.cpp  main.cpp
example/: buffalo_escape_periodic.json  burningship_escape_periodic.json  julia_escape_periodic.json  mandelbrot.json  mandelbrot_density_linear.json  mandelbrot_escape_periodic.json  manowar_escape_periodic.json  phoenix_escape_periodic.json
examples/: mandelbrot-escape-periodic.json
include/: SettingsWindow.h  algorithm.h  buffer.h  callback.h  canvas.h  color.h  defaults.h  fractal.h  gui.h  image.h  painter.h  shader.h  timer.h  uniform.h
lib/GL/: gl.c  gl.h
src/: BurningShip.cpp  BurningShip.h  Fractal.cpp  Fractal.h  InteractiveLabel.cpp  Julia.cpp  Julia.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Mandelbrot.cpp  Mandelbrot.h  Manowar.cpp  Manowar.h  Newton.cpp  Newton.h  Phoenix.cpp  Phoenix.h  SettingsWindow.cpp  buffer.cpp  callback.cpp  canvas.cpp  gui.cpp  image.cpp  main.cpp  shader.cpp  timer.cpp  uniform.cpp
